--- a/rxsample/src/main/res/layout/activity_fullscreen_photo.xml
+++ b/rxsample/src/main/res/layout/activity_fullscreen_photo.xml
@@ -1,12 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
                 android:background="#000"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
     <ImageView
             android:id="@+id/photo"
-            android:transitionName="avatar"
+            android:transitionName="@string/avatar_transition"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
