[rxsample][general] refactor

--- a/rxsample/src/main/res/layout/item_user_row.xml
+++ b/rxsample/src/main/res/layout/item_user_row.xml
@@ -20,8 +20,7 @@
         android:layout_marginLeft="65dp"
         android:layout_marginTop="10dp"
         android:textSize="18dp"
-        android:transitionName="login"
-        tools:text="@string/example_login" />
+        android:transitionName="login" />
 
     <TextView
         android:id="@+id/url"
@@ -30,8 +29,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="65dp"
-        android:transitionName="url"
-        tools:text="@string/example_url" />
+        android:transitionName="url" />
 
     <ImageView
         android:layout_width="35dp"
