--- a/recyclerviewsample/src/main/res/layout/vh_header.xml
+++ b/recyclerviewsample/src/main/res/layout/vh_header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                android:background="@android:color/darker_gray"
+                android:background="@color/colorAccent"
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
 
