--- a/recyclerviewsample/src/main/res/layout/vh_product.xml
+++ b/recyclerviewsample/src/main/res/layout/vh_product.xml
@@ -1,59 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-              android:background="@android:color/white"
-              android:layout_width="match_parent"
-              android:layout_height="60dp">
+                android:background="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="100dp">
+
     <ImageView
             android:id="@+id/product_photo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_margin="5dp"/>
 
     <TextView
             android:id="@+id/product_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="25dp"
             android:textSize="20dp"
             tools:text="@string/fake_title"/>
-
-    <TextView
-            android:id="@+id/product_price_currency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="5dp"
-            android:textSize="15dp"
-            tools:text="zl"/>
 
     <TextView
             android:id="@+id/product_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/product_price_currency"
-            android:layout_marginTop="5dp"
-            android:textSize="15dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="20dp"
+            android:textSize="17dp"
             tools:text="@string/fake_price"/>
 
+    <TextView
+            android:id="@+id/product_price_currency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/product_price"
+            android:layout_marginTop="21dp"
+            android:textSize="15dp"
+            android:text="£"/>
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="99dp"
+            android:background="@android:color/darker_gray"/>
 
     <TextView
             android:id="@+id/product_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginLeft="100dp"
             android:textSize="12dp"
             android:ellipsize="end"
+            android:layout_marginTop="50dp"
             android:lines="2"
-            tools:text="@string/fake_descripton"/>
-
-    <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="59dp"
-            android:background="@android:color/darker_gray"/>
+            tools:text="@string/fake_descripton"
+            android:layout_alignParentTop="true"/>
 
 </RelativeLayout>
