[rxsample][viewState] add: keep state after screen configuration changed

--- a/rxsample/src/main/res/layout/activity_listing.xml
+++ b/rxsample/src/main/res/layout/activity_listing.xml
@@ -4,11 +4,9 @@
 
     <ProgressBar
             android:id="@+id/loadingView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="150dp"
-            android:indeterminate="true"
-            android:layout_marginTop="130dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
 
     <TextView
             android:id="@+id/errorView"
